--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/main.scss">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     
 </head>
 <body>
@@ -39,7 +40,52 @@
         </div>
     </header>
 
+    <section class="event event--frontend">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Front-end</h2>
+                <p class="event__details__desciption">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil odit enim ullam pariatur quisquam, ducimus praesentium sit nulla deleniti neque beatae et eius, harum eum voluptas voluptate vel explicabo minus.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="event event--ui-ux event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">UI/UX</h2>
+                <p class="event__details__desciption">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil odit enim ullam pariatur quisquam, ducimus praesentium sit nulla deleniti neque beatae et eius, harum eum voluptas voluptate vel explicabo minus.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="event event--data-science">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Data Scinece</h2>
+                <p class="event__details__desciption">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil odit enim ullam pariatur quisquam, ducimus praesentium sit nulla deleniti neque beatae et eius, harum eum voluptas voluptate vel explicabo minus.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="event event--backend event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">Back-end</h2>
+                <p class="event__details__desciption">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil odit enim ullam pariatur quisquam, ducimus praesentium sit nulla deleniti neque beatae et eius, harum eum voluptas voluptate vel explicabo minus.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
