--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil odit enim ullam pariatur quisquam, ducimus praesentium sit nulla deleniti neque beatae et eius, harum eum voluptas voluptate vel explicabo minus.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="UI/UX">
         </div>
     </section>
     <section class="event event--data-science">
@@ -70,7 +70,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil odit enim ullam pariatur quisquam, ducimus praesentium sit nulla deleniti neque beatae et eius, harum eum voluptas voluptate vel explicabo minus.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="Data Science">
         </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -81,7 +81,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil odit enim ullam pariatur quisquam, ducimus praesentium sit nulla deleniti neque beatae et eius, harum eum voluptas voluptate vel explicabo minus.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt="Back-end">
         </div>
     </section>
 
